--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework-09</title>
+    <title>Gallery</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <script src="./js/1-gallery.js" type="module" defer></script>
   </head>
   <body>
-    <load ="/1-gallery.html" />
-    <load ="/2-form.html" />
+   
+    <ul class="gallery"></ul>
+   
   </body>
 </html>
