--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -9,8 +9,12 @@
     <script src="./js/1-gallery.js" type="module" defer></script>
   </head>
   <body>
-   
-    <ul class="gallery"></ul>
-   
+   <section>
+    <a href="./index.html">Go Home</a>
+    <h1>Welcome to the Gallery</h1>
+   </section>
+    
+   <ul class="gallery"></ul>
+
   </body>
 </html>
