--- a/src/2-form.html
+++ b/src/2-form.html
@@ -9,6 +9,11 @@
     <script src="./js/2-form.js" type="module" defer></script>
   </head>
   <body>
+    <section>
+      <a href="./index.html">Go Home</a>
+      <h1>Welcome to the Form</h1>
+     </section> 
+
     <form class="feedback-form" autocomplete="off">
       <label>
         Email
