--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="/1-gallery.html" />
-    <load ="/2-form.html" />
+<div>
+  <nav class="page-nav">
+      <ul>
+        <li>
+          <a href="./1-gallery.html">Gallery</a>
+        </li>
+        <li>
+          <a href="./2-form.html">Form</a>
+        </li>
+      </ul>
+  </nav>
+</div>
+
   </body>
 </html>
